# dynamic-graph

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  CMakeLists.txt  COPYING.LESSER  ChangeLog  INSTALL  NEWS  README  README.md  cmake_uninstall.cmake.in  dynamicGraph.pc  index.html  package.xml
.travis/: build
CMakeModules/: FindPTHREAD.cmake
debian/: changelog  control  copyright  libdynamic-graph-dev.install  libdynamic-graph-doc.doc-base  libdynamic-graph-doc.install  libdynamic-graph-doc.lintian-overrides  libdynamic-graph1.0.0.99.install  libdynamic-graph1.2.1.install  libdynamic-graph3.0.0.install  rules  watch
debian/upstream/: signing-key.asc
doc/: CMakeLists.txt  Doxyfile.extra.in  Makefile  cmake_install.cmake  dg-shell-plugin.pod.in  dg-shell.pod.in  footer.html  header.html  package.dox  package.dox.cmake
doc/additionalDoc/: debug-doc.h  debug-logger.h  debug-real-time-logger.h  debug-trace-doc.h  debug.h  dgshell_doc.h  doc-command.h  doc-debug-real-time-logger.h  entity.h  extension.h  factory.h  graph.h  installation.h  introduction.h  package.h  pool.h  references.h  shellfunctions_doc.h  signal.h  tracer-real-timedoc.h  tracerdoc.h  writeGraph.h
doc/pictures/: footer.txt
doxygen/HEAD/: a00001.html  a00002.html  a00002.js  a00002_shellfunctions_doc_dup.js  a00003.html  a00004.html  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00021.js  (+1673 more)
doxygen/HEAD/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_5f.html  all_5f.js  all_6.js  all_61.html  all_61.js  all_62.html  all_62.js  all_63.html  all_63.js  all_64.html  all_64.js  all_65.html  all_65.js  all_66.html  all_66.js  all_67.html  all_67.js  all_68.html  all_68.js  all_69.html  all_69.js  all_6b.js  all_6c.html  all_6c.js  all_6d.html  all_6d.js  all_6e.html  (+324 more)
include/: CMakeLists.txt  dynamicGraph-API.h
include/dynamic-graph/: #shell-procedure.h#  .#shell-procedure.h  CMakeLists.txt  all-commands.h  all-signals.h  command-bind.h  command-direct-getter.h  command-direct-setter.h  command-getter.h  command-getter.t.cpp  command-setter.h  command-setter.t.cpp  command.h  contiifstream.h  debug.h  dynamic-graph-api.h  eigen-io.h  entity-helper.h  entity.h  exception-abstract.h  exception-factory.h  exception-signal.h  exception-traces.h  factory.h  functions.h  fwd.hh  import-default-paths.h.cmake  import.h  interpreter-helper.h  interpreter.h  linear-algebra.h  logger.h  null-ptr.hh  parameter.h  plugin-loader.h  pool.h  process-list.hh  real-time-logger-def.h  real-time-logger.h  shell-functions.h  (+17 more)
js/: view_sot_dg.html
share/: CMakeLists.txt
share/dynamic-graph/script/: shell.dg  tracer.dg
src/: CMakeLists.txt
src/command/: command.cpp  value.cpp
src/debug/: SourcesLib.cmake  contiifstream.cpp  contiifstream.h  debug.cpp  debug.h  logger.cpp  real-time-logger.cpp
src/dgraph/: SourcesLib.cmake  entity.cpp  entity.h  factory.cpp  factory.h  import.cpp  interpreter-helper.cpp  interpreter.cpp  interpreter.h  plugin-loader.cpp  plugin-loader.h  pool.cpp  pool.h  shell-functions.cpp  shell-functions.h  shell-procedure.cpp  shell-procedure.h
src/exception/: SourcesLib.cmake  exception-abstract.cpp  exception-abstract.h  exception-factory.cpp  exception-factory.h  exception-signal.cpp  exception-signal.h  exception-traces.cpp
src/mt/: process-list.cpp
src/plugins/: shell-functions.cpp  shell-procedure.cpp
src/shell/: functions.cpp
src/signal/: SourcesLib.cmake  signal-array.cpp  signal-array.h  signal-base.h  signal-cast-helper.cpp  signal-caster.cpp  signal-ptr.h  signal-ptr.t.cpp  signal-time-dependant.h  signal.h  signal.t.cpp  time-dependency.h  time-dependency.t.cpp
src/traces/: tracer-real-time.cpp  tracer.cpp
tests/: CMakeLists.txt  command-test.cpp  command.cpp  custom-entity.cpp  debug-logger-winit.cpp  debug-logger.cpp  debug-real-time-tracer.cpp  debug-trace.cpp  debug-tracer.cpp  entity.cpp  exceptions.cpp  factory.cpp  interpreter-tracer.cpp  interpreter.cpp  interpreter.h  pool.cpp  real-time-logger.cpp  signal-all.cpp  signal-array.cpp  signal-cast-register-test.h  signal-cast-registerer-libA.cpp  signal-cast-registerer-libA.hh  signal-cast-registerer-libB.cpp  signal-cast-registerer-libB.hh  signal-cast-registerer.cpp  signal-ptr.cpp  signal-time-dependent.cpp  test-mt.cpp  test_depend.cpp  test_signalcast_libA.cpp  test_signalcast_libA.h  test_signalcast_libB.cpp  test_signalcast_libB.h  value.cpp
tests/data/: interpreter-tracer.dg
tools/: CMakeLists.txt  dg-python.cpp  dg-shell-plugin.cmake  dg-shell.cpp  shell.sh.cmake  sot-shell-plugin.sh.cmake  test_shell.cpp
travis_custom/: build_custom  custom_before_install
unitTesting/: CMakeLists.txt  test-value.cpp  test_depend.cpp  test_factory.cpp  test_pool.cpp  test_shell.cpp  test_signalcast.cpp  test_signalcast_libA.cpp  test_signalcast_libA.h  test_signalcast_libB.cpp  test_signalcast_libB.h
